--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --primary: #CBB677;
   /* Light Primary */
   /* Dark Primary */
-  --accent: #1B1F3A;               
+  --accent: #1B1F3A;
   /* Accent Color */
   --surface: #FFEDE2;
   /* Surface/Background Color */
@@ -29,7 +29,7 @@ body {
   --color-accent: var(--accent);
   --color-surface: var(--surface);
   --color-card: var(--card);
-  --color-warning: var(--warning);      
+  --color-warning: var(--warning);
   --color-success: var(--success);
   --color-info: var(--info);
 }
@@ -38,3 +38,93 @@ body {
     --breakpoint-sm: ;
     --breakpoint-md: ;
     --breakpoint-lg: ; */
+
+.section-gap {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+/* Small screens (sm) */
+@media (min-width: 640px) {
+  .section-gap {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+}
+
+/* Medium screens (md) */
+@media (min-width: 768px) {
+  .section-gap {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+}
+
+/* Large screens (lg) */
+@media (min-width: 1024px) {
+  .section-gap {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+}
+
+/* Extra-large screens (xl) */
+@media (min-width: 1280px) {
+  .section-gap {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+}
+
+/* 2X Large screens (2xl) */
+@media (min-width: 1536px) {
+  .section-gap {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+
+.container {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+/* Small screens (sm) */
+@media (min-width: 640px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+/* Medium screens (md) */
+@media (min-width: 768px) {
+  .container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+/* Large screens (lg) */
+@media (min-width: 1024px) {
+  .container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+/* Extra-large screens (xl) */
+@media (min-width: 1280px) {
+  .container {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+}
+
+/* 2X Large screens (2xl) */
+@media (min-width: 1536px) {
+  .container {
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+}
